--- a/index.html
+++ b/index.html
@@ -758,8 +758,8 @@
             <div class="product-info">
               <div class="product-name">UV 15 Hydro Lotion</div>
               <div class="product-description">
-                Hydrating UV protection lotion (100ml) with SPF 15. Shields skin from harmful UV rays while maintaining
-                moisture balance.
+                Hydrating UV protection lotion (100ml) with SPF 15. Shields skin from harmful UVA and UVB rays while maintaining
+                moisture balance and brightening skin.
               </div>
               <div class="product-price">RM 228</div>
               <div class="quantity-selector">
@@ -788,7 +788,7 @@
             <div class="product-info">
               <div class="product-name">Whitening UV 3 in 1</div>
               <div class="product-description">
-                Multi-functional whitening cream (30g) combining UV protection, brightening, and moisturizing in one
+                Multi-functional whitening cream (30g) combining UV protection, makeup base foundation, and moisturizing in one
                 powerful formula.
               </div>
               <div class="product-price">RM 199</div>
@@ -818,8 +818,7 @@
             <div class="product-info">
               <div class="product-name">Hydrating White Mask</div>
               <div class="product-description">
-                Intensive whitening mask (30g) that deeply hydrates while brightening complexion. Perfect for weekly
-                skincare routine.
+                Intensive whitening mask (30g) that deeply hydrates while brightening complexion. Great for overnight use. 
               </div>
               <div class="product-price">RM 139</div>
               <div class="quantity-selector">
@@ -849,8 +848,7 @@
             <div class="product-info">
               <div class="product-name">Tender Cleansing Milk</div>
               <div class="product-description">
-                Gentle cleansing milk (150ml) that removes impurities while nourishing sensitive skin. Perfect for daily
-                use.
+                Gentle cleansing milk (150ml) that removes impurities while nourishing sensitive skin. Perfect for makeup removal.
               </div>
               <div class="product-price">RM 140</div>
               <div class="quantity-selector">
@@ -879,7 +877,7 @@
             <div class="product-info">
               <div class="product-name">Balancing Softener</div>
               <div class="product-description">
-                pH-balancing toner (150ml) that softens and prepares skin for better absorption of skincare products.
+                pH-balancing toner (150ml) that softens and prepares skin for better absorption of skincare products. Nourishes dehydrated skin.
               </div>
               <div class="product-price">RM 180</div>
               <div class="quantity-selector">
@@ -1000,7 +998,7 @@
               <div class="product-name">Spotless Gel Mask</div>
               <div class="product-description">
                 Targeted gel mask (30ml) for blemish-prone skin. Controls excess oil and minimizes pores for clear,
-                refined complexion.
+                refined complexion. Perfect for acne.
               </div>
               <div class="product-price">RM 139</div>
               <div class="quantity-selector">
