--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
     .product-image-container {
       width: 100%;
-      height: 250px;
+      height: 550px;
       position: relative;
       overflow: hidden;
       background: linear-gradient(135deg, #f5f5f5 0%, #e0e0e0 100%);
@@ -207,7 +207,6 @@
       font-size: 3em;
       position: relative;
       background-size: cover;
-      background-position: center;
     }
 
     .product-image.placeholder {
@@ -713,14 +712,12 @@
               <button class="image-arrow left" onclick="changeImage(this, -1)">‹</button>
               <button class="image-arrow right" onclick="changeImage(this, 1)">›</button>
               <div class="product-images">
-                <div class="product-image placeholder">💎</div>
-                <!-- Add more images by uncommenting and replacing with actual image URLs -->
-                <!-- <div class="product-image" style="background-image: url('path/to/image2.jpg')"></div> -->
+                <div class="product-image" style="background-image: url('./images/renewal-white-moisturizer.jpeg')">
+                </div>
                 <!-- <div class="product-image" style="background-image: url('path/to/image3.jpg')"></div> -->
               </div>
               <div class="image-nav">
                 <div class="image-dot active" onclick="goToImage(this, 0)"></div>
-                <!-- Add dots for additional images -->
                 <!-- <div class="image-dot" onclick="goToImage(this, 1)"></div> -->
                 <!-- <div class="image-dot" onclick="goToImage(this, 2)"></div> -->
               </div>
@@ -749,7 +746,7 @@
               <button class="image-arrow left" onclick="changeImage(this, -1)">‹</button>
               <button class="image-arrow right" onclick="changeImage(this, 1)">›</button>
               <div class="product-images">
-                <div class="product-image placeholder">☀️</div>
+                <div class="product-image" style="background-image: url('./images/uv-15-hydro-lotion.jpeg')"></div>
               </div>
               <div class="image-nav">
                 <div class="image-dot active" onclick="goToImage(this, 0)"></div>
@@ -758,7 +755,8 @@
             <div class="product-info">
               <div class="product-name">UV 15 Hydro Lotion</div>
               <div class="product-description">
-                Hydrating UV protection lotion (100ml) with SPF 15. Shields skin from harmful UVA and UVB rays while maintaining
+                Hydrating UV protection lotion (100ml) with SPF 15. Shields skin from harmful UVA and UVB rays while
+                maintaining
                 moisture balance and brightening skin.
               </div>
               <div class="product-price">RM 228</div>
@@ -779,7 +777,7 @@
               <button class="image-arrow left" onclick="changeImage(this, -1)">‹</button>
               <button class="image-arrow right" onclick="changeImage(this, 1)">›</button>
               <div class="product-images">
-                <div class="product-image placeholder">✨</div>
+                <div class="product-image" style="background-image: url('./images/whitening-uv-3-in-1.jpeg')"></div>
               </div>
               <div class="image-nav">
                 <div class="image-dot active" onclick="goToImage(this, 0)"></div>
@@ -788,7 +786,8 @@
             <div class="product-info">
               <div class="product-name">Whitening UV 3 in 1</div>
               <div class="product-description">
-                Multi-functional whitening cream (30g) combining UV protection, makeup base foundation, and moisturizing in one
+                Multi-functional whitening cream (30g) combining UV protection, makeup base foundation, and moisturizing
+                in one
                 powerful formula.
               </div>
               <div class="product-price">RM 199</div>
@@ -809,7 +808,7 @@
               <button class="image-arrow left" onclick="changeImage(this, -1)">‹</button>
               <button class="image-arrow right" onclick="changeImage(this, 1)">›</button>
               <div class="product-images">
-                <div class="product-image placeholder">🎭</div>
+                <div class="product-image" style="background-image: url('./images/hydrating-white-mask.jpeg')"></div>
               </div>
               <div class="image-nav">
                 <div class="image-dot active" onclick="goToImage(this, 0)"></div>
@@ -818,7 +817,8 @@
             <div class="product-info">
               <div class="product-name">Hydrating White Mask</div>
               <div class="product-description">
-                Intensive whitening mask (30g) that deeply hydrates while brightening complexion. Great for overnight use. 
+                Intensive whitening mask (30g) that deeply hydrates while brightening complexion. Great for overnight
+                use.
               </div>
               <div class="product-price">RM 139</div>
               <div class="quantity-selector">
@@ -839,7 +839,7 @@
               <button class="image-arrow left" onclick="changeImage(this, -1)">‹</button>
               <button class="image-arrow right" onclick="changeImage(this, 1)">›</button>
               <div class="product-images">
-                <div class="product-image placeholder">🥛</div>
+                <div class="product-image" style="background-image: url('./images/tender-cleansing-milk.jpeg')"></div>
               </div>
               <div class="image-nav">
                 <div class="image-dot active" onclick="goToImage(this, 0)"></div>
@@ -848,7 +848,8 @@
             <div class="product-info">
               <div class="product-name">Tender Cleansing Milk</div>
               <div class="product-description">
-                Gentle cleansing milk (150ml) that removes impurities while nourishing sensitive skin. Perfect for makeup removal.
+                Gentle cleansing milk (150ml) that removes impurities while nourishing sensitive skin. Perfect for
+                makeup removal.
               </div>
               <div class="product-price">RM 140</div>
               <div class="quantity-selector">
@@ -868,7 +869,7 @@
               <button class="image-arrow left" onclick="changeImage(this, -1)">‹</button>
               <button class="image-arrow right" onclick="changeImage(this, 1)">›</button>
               <div class="product-images">
-                <div class="product-image placeholder">💧</div>
+                <div class="product-image" style="background-image: url('./images/balancing-softener.jpeg')"></div>
               </div>
               <div class="image-nav">
                 <div class="image-dot active" onclick="goToImage(this, 0)"></div>
@@ -877,7 +878,8 @@
             <div class="product-info">
               <div class="product-name">Balancing Softener</div>
               <div class="product-description">
-                pH-balancing toner (150ml) that softens and prepares skin for better absorption of skincare products. Nourishes dehydrated skin.
+                pH-balancing toner (150ml) that softens and prepares skin for better absorption of skincare products.
+                Nourishes dehydrated skin.
               </div>
               <div class="product-price">RM 180</div>
               <div class="quantity-selector">
@@ -897,7 +899,7 @@
               <button class="image-arrow left" onclick="changeImage(this, -1)">‹</button>
               <button class="image-arrow right" onclick="changeImage(this, 1)">›</button>
               <div class="product-images">
-                <div class="product-image placeholder">🧴</div>
+                <div class="product-image" style="background-image: url('./images/hydrating-repair-moisturizer.jpeg')"></div>
               </div>
               <div class="image-nav">
                 <div class="image-dot active" onclick="goToImage(this, 0)"></div>
@@ -927,7 +929,7 @@
               <button class="image-arrow left" onclick="changeImage(this, -1)">‹</button>
               <button class="image-arrow right" onclick="changeImage(this, 1)">›</button>
               <div class="product-images">
-                <div class="product-image placeholder">🌟</div>
+                <div class="product-image" style="background-image: url('./images/hydrating-repair-moisturizer-plus.jpeg')"></div>
               </div>
               <div class="image-nav">
                 <div class="image-dot active" onclick="goToImage(this, 0)"></div>
@@ -958,7 +960,7 @@
               <button class="image-arrow left" onclick="changeImage(this, -1)">‹</button>
               <button class="image-arrow right" onclick="changeImage(this, 1)">›</button>
               <div class="product-images">
-                <div class="product-image placeholder">🧼</div>
+                <div class="product-image" style="background-image: url('./images/soft-gel-cleanser.jpeg')"></div>
               </div>
               <div class="image-nav">
                 <div class="image-dot active" onclick="goToImage(this, 0)"></div>
@@ -988,7 +990,7 @@
               <button class="image-arrow left" onclick="changeImage(this, -1)">‹</button>
               <button class="image-arrow right" onclick="changeImage(this, 1)">›</button>
               <div class="product-images">
-                <div class="product-image placeholder">🎯</div>
+                <div class="product-image" style="background-image: url('./images/spotless-gel-mask.jpeg')"></div>
               </div>
               <div class="image-nav">
                 <div class="image-dot active" onclick="goToImage(this, 0)"></div>
