--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GSpace Beauty - Product Order</title>
+  <title>GSpace Product Order</title>
+  <link rel="icon" type="image/x-icon" href="./logo-transparent.png">
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
   <style>
     * {
@@ -899,7 +900,8 @@
               <button class="image-arrow left" onclick="changeImage(this, -1)">‹</button>
               <button class="image-arrow right" onclick="changeImage(this, 1)">›</button>
               <div class="product-images">
-                <div class="product-image" style="background-image: url('./images/hydrating-repair-moisturizer.jpeg')"></div>
+                <div class="product-image" style="background-image: url('./images/hydrating-repair-moisturizer.jpeg')">
+                </div>
               </div>
               <div class="image-nav">
                 <div class="image-dot active" onclick="goToImage(this, 0)"></div>
@@ -929,7 +931,8 @@
               <button class="image-arrow left" onclick="changeImage(this, -1)">‹</button>
               <button class="image-arrow right" onclick="changeImage(this, 1)">›</button>
               <div class="product-images">
-                <div class="product-image" style="background-image: url('./images/hydrating-repair-moisturizer-plus.jpeg')"></div>
+                <div class="product-image"
+                  style="background-image: url('./images/hydrating-repair-moisturizer-plus.jpeg')"></div>
               </div>
               <div class="image-nav">
                 <div class="image-dot active" onclick="goToImage(this, 0)"></div>
