fix some weight copy

--- a/index.html
+++ b/index.html
@@ -787,7 +787,7 @@
             <div class="product-info">
               <div class="product-name">Whitening UV 3 in 1</div>
               <div class="product-description">
-                Multi-functional whitening cream (30g) combining UV protection, makeup base foundation, and moisturizing
+                Multi-functional whitening cream (30ml) combining UV protection, makeup base foundation, and moisturizing
                 in one
                 powerful formula.
               </div>
@@ -818,7 +818,7 @@
             <div class="product-info">
               <div class="product-name">Hydrating White Mask</div>
               <div class="product-description">
-                Intensive whitening mask (30g) that deeply hydrates while brightening complexion. Great for overnight
+                Intensive whitening mask (30ml) that deeply hydrates while brightening complexion. Great for overnight
                 use.
               </div>
               <div class="product-price">RM 138</div>
@@ -941,7 +941,7 @@
             <div class="product-info">
               <div class="product-name">Hydrating Repair Moisturizer Plus</div>
               <div class="product-description">
-                Advanced moisturizer (30g) for mature skin. Enhanced formula with anti-aging properties for superior
+                Advanced moisturizer (30ml) for mature skin. Enhanced formula with anti-aging properties for superior
                 hydration and repair.
               </div>
               <div class="product-price">RM 228</div>
