add more agents

--- a/index.html
+++ b/index.html
@@ -1095,7 +1095,13 @@
     const AGENT_DIRECTORY = {
       'admin': 'sonderistic95@gmail.com',
       'andy': 'andygriffingonzalez996@gmail.com',
-      'mj': 'mjbesin2008@gmail.com'
+      'mj': 'mjbesin2008@gmail.com',
+      'izzah': 'izzahhatiqah@gmail.com',
+      'linda': 'norlindaebie13@gmail.com',
+      'celine': 'celinetan9897123@gmail.com',
+      'jezz': 'jezzgiong@gmail.com',
+      'sayrah': 'sayrahonney1011@gmail.com',
+      'monica': 'mfgojesbeauty@gmail.com',
     };
 
     // Initialize EmailJS
