--- a/index.html
+++ b/index.html
@@ -1102,6 +1102,7 @@
       'jezz': 'jezzgiong@gmail.com',
       'sayrah': 'sayrahonney1011@gmail.com',
       'monica': 'mfgojesbeauty@gmail.com',
+      'candy': 'lonyukyun1015kmg@gmail.com',
     };
 
     // Initialize EmailJS
