--- a/index.html
+++ b/index.html
@@ -1103,6 +1103,7 @@
       'sayrah': 'sayrahonney1011@gmail.com',
       'monica': 'mfgojesbeauty@gmail.com',
       'candy': 'lonyukyun1015kmg@gmail.com',
+      'jane': 'chrysjane6@gmail.com',
     };
 
     // Initialize EmailJS
