add agent sezzy

--- a/index.html
+++ b/index.html
@@ -1104,6 +1104,7 @@
       'monica': 'mfgojesbeauty@gmail.com',
       'candy': 'lonyukyun1015kmg@gmail.com',
       'jane': 'chrysjane6@gmail.com',
+      'sezzy': 'sezzyzey@gmail.com',
     };
 
     // Initialize EmailJS
