--- a/index.html
+++ b/index.html
@@ -1105,6 +1105,8 @@
       'candy': 'lonyukyun1015kmg@gmail.com',
       'jane': 'chrysjane6@gmail.com',
       'sezzy': 'sezzyzey@gmail.com',
+      'ida': 'idaakhaan@gmail.com',
+      'yana228': 'suri.yanah@icloud.com',
     };
 
     // Initialize EmailJS
