--- a/index.html
+++ b/index.html
@@ -1107,6 +1107,7 @@
       'sezzy': 'sezzyzey@gmail.com',
       'ida': 'idaakhaan@gmail.com',
       'yana228': 'suri.yanah@icloud.com',
+      'florey25': 'efloreyj@gmail.com',
     };
 
     // Initialize EmailJS
