Add Serina agent

--- a/index.html
+++ b/index.html
@@ -1108,6 +1108,7 @@
       'ida': 'idaakhaan@gmail.com',
       'yana228': 'suri.yanah@icloud.com',
       'florey25': 'efloreyj@gmail.com',
+      'serina': 'serinatan07@gmail.com',
     };
 
     // Initialize EmailJS
